完善 V1.0 Metrics 生命周期能力
